syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "package com.example.SystemEvents.grpc";

service action {
  rpc logAction(Request) returns (APIResponse);
  rpc check(Empty) returns (APIResponse);
}

message Request {
  google.protobuf.Timestamp timestamp = 1;
  string serviceName = 2 ;
  int64 userId = 3 ;
  enum ActionType {
      CREATE = 0;
      DELETE = 1;
      GET = 2;
      UPDATE = 3;
  }
  ActionType actionType = 4;
  string resourceName = 5;
  int32 statusCode = 6;
}

message APIResponse {
  enum ResponseType {
    SUCCESS = 0;
    ERROR = 1;
  }
  string responseMessage = 1;
  ResponseType responseType = 2;
}

message Empty {

}